fix(search): address java-reviewer findings on Slice 10
- V9: add UNIQUE(question_id) on corpus_chunk; implicit B-tree index covers upsertChunk filter
- JdbcSearchRepository.upsertChunk: DELETE+INSERT -> INSERT ... ON CONFLICT DO UPDATE (atomic, race-free)
- SearchService: compute embedding before transaction boundary to avoid connection held during inference
  and prevent FTS rollback on transient model failure (indexQuestion -> persistIndex split)
- SearchService.hybridSearch: extract queryHybrid delegate; embed outside TX
- ProductionEmbeddingAdapter: return zero vector + WARN log instead of UOE so bootRun stays functional
- Collectors.toList() -> .toList() (Java 21 idiomatic)